Pre-release changes:
- [Fix] #167: Loading winch connected same vessel.