@@ -36,7 +36,8 @@ PART
 		cableDamper = 0.1
 		cableWidth = 0.04
 		motorMaxSpeed = 1
-		motorAcceleration = 0.05
+		// Acceleration per second.
+		motorAcceleration = 0.4
 		powerDrain = 0.3
 		headTransformName = head
 		headPortNodeName = portNode
