@@ -37,7 +37,8 @@ PART
 		cableDamper = 0.1
 		cableWidth = 0.04
 		motorMaxSpeed = 2
-		motorAcceleration = 0.05
+		// Acceleration per second.
+		motorAcceleration = 0.4
 		powerDrain = 0.5
 		headTransformName = head
 		headPortNodeName = portNode
